--- a/GearsSite/RGN/Content/main.css
+++ b/GearsSite/RGN/Content/main.css
@@ -10,13 +10,15 @@
 }
 .landing
 {
+    background-image: url('../Catalog/Images/bg.jpg');
     background-size: cover;
-    height: 85vh;
+    height: 70vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     text-align: center;
+    color: #fff;
 }
 .btnCart 
 {
@@ -28,6 +30,10 @@
 .categoryBox
 {
     padding: 20px;    
-    border-radius: 10px;
-    border: 2px solid #2c3e50;
+    border-radius: 10px;    
+    background-color: #edeeef;
+}
+.para
+{
+    text-indent: 50px;
 }
