--- a/GearsSite/RGN/Site.Master
+++ b/GearsSite/RGN/Site.Master
@@ -51,6 +51,7 @@
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
+                        <li><a runat="server" id="adminLink" visible="false"  href="~/Admin/AdminPage">Admin</a></li>
                         <li><a runat="server" href="~/">Home</a></li>
                         <li><a runat="server" href="~/About">About</a></li>
                         <li><a runat="server" href="~/Contact">Contact</a></li>
@@ -78,17 +79,15 @@
             </div>
             
         </div>
-        <a runat="server" href="~/ShoppingCart" ID="cartCount" class="btn btn-info btnCart">&nbsp;</a>
+        <a runat="server" href="~/ShoppingCart" ID="cartCount" class="btn btn-success btnCart">&nbsp;</a>
         
-        
-
-        <div class="container body-content">
+        <div class="container-fluid body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
 
             </asp:ContentPlaceHolder>
       </div>
-      <br />
-      <br />  
+        <br />
+        <br />
       <div class="container">
         <hr />
         <footer>
