--- a/GearsSite/RGN/Content/main.css
+++ b/GearsSite/RGN/Content/main.css
@@ -9,11 +9,31 @@
     border-radius: 7px;
     padding:0;
 }
+.navbar-brand
+{
+    font-family: 'Kaushan Script', cursive; 
+    margin-right: 30px;
+}
+.logo 
+{
+    font-size: 50px;
+}
+.navbar
+
+{
+    background-color: rgb(44, 62, 80);
+    transition: 0.4s ease;
+}
+.navbar.top-of-page
+{
+    background-color: transparent;
+    transition: 0.4s ease;
+}
 .landing
 {
     background-image: url('../Catalog/Images/bg.jpg');
     background-size: cover;
-    height: 70vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -30,7 +50,7 @@
 }
 .categoryBox
 {
-    padding: 20px;    
+    padding: 30px;    
     border-radius: 10px;    
     background-color: #edeeef;
 }
@@ -60,3 +80,20 @@
     border-radius: 10px;
 
 }
+.custom-glyph
+{
+    font-size: 30px;
+}
+.cat-box:hover
+{
+    text-decoration:none;   
+}
+.custom-font
+{
+    font-family: 'Kaushan Script', cursive;
+    font-size: 60px;
+}
+
+
+
+
