--- a/JouskaUnivesrity/JouskaUnivesrity/Content/Site.css
+++ b/JouskaUnivesrity/JouskaUnivesrity/Content/Site.css
@@ -1,13 +1,13 @@
 ﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+    
 }
 
 /* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+.container-fluid {
+    padding-left:0;
+    padding-right:0;
 }
+
 
 /* Set width on the form input elements since they're 100% wide by default */
 input,
@@ -39,4 +39,35 @@ input[type="checkbox"].input-validation-error {
 
 .validation-summary-valid {
     display: none;
+}
+
+.landing {
+    background-image: url('../images/bg.jpg');
+    background-attachment: fixed;
+    background-size: cover;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.title {
+    font-family: 'Patua One', cursive; 
+}
+.jumbotron {
+    background-color: rgba(255,255,255,1);
+    padding: 50px;
+    box-shadow: 0px 0px 30px #000000;    
+}
+.navbar-inverse .navbar-nav > li > a {
+    text-transform: uppercase;
+    font-family: 'Roboto Condensed', sans-serif;
+    letter-spacing: 1px;
+}
+.navbar-brand {
+    font-size: 23px;
+}
+* {
+    font-family: 'Roboto Condensed', sans-serif;    
 }
