--- a/JouskaUnivesrity/JouskaUnivesrity/Views/Home/Index.cshtml
+++ b/JouskaUnivesrity/JouskaUnivesrity/Views/Home/Index.cshtml
@@ -1,25 +1,34 @@
 ﻿@{
     ViewBag.Title = "Home Page";
 }
+<div class="landing" >
+    <div data-tilt class="jumbotron landing-jumbo">
+        <h1 style="font-family: 'Patua One', cursive; " class="jumbo-title">Jouska University</h1>
+        <p>We are the university you saw in your dreams.</p>
+    </div>
+</div>
+<br /><br />
+<div class="container text-center">
+    <h2>You definitely saw us in your dream</h2>
+    <br />
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+</div>
 <br />
-<div class="jumbotron">
-    <h1>Jouska University</h1>
-</div>
-<div class="row">
-    <div class="col-md-4">
-        <h2>Welcome to Jouska University</h2>
-        <p>
-            Jouska University is a private research university in Kathmandu, Nepal. Founded in 1861 in response to the increasing industrialization of the United States.
-        </p>
-    </div>
-    <div class="col-md-4">
-         <h2>Build it from scratch</h2>
-        <p>You can build the application by following the steps in the tutorial series on the ASP.NET site.</p>
-        <p><a class="btn btn-default" href="http://www.asp.net/mvc/tutorials/getting-started-with-ef-using-mvc/">See the tutorial &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Download it</h2>
-        <p>You can download the completed project from the Microsoft Code Gallery.</p>
-        <p><a class="btn btn-default" href="http://code.msdn.microsoft.com/ASPNET-MVC-Application-b01a9fe8">Download &raquo;</a></p>
-    </div>
-</div>
+<br />
+<br />
+
