--- a/JouskaUnivesrity/JouskaUnivesrity/Views/Shared/_Layout.cshtml
+++ b/JouskaUnivesrity/JouskaUnivesrity/Views/Shared/_Layout.cshtml
@@ -6,6 +6,11 @@
     <title>@ViewBag.Title - Jouska University</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link href="https://fonts.googleapis.com/css?family=Patua+One" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
+
+
+
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -16,25 +21,28 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span> 
                 </button>
-                @Html.ActionLink("Jouska University", "Index", "Home", null, new { @class = "navbar-brand" })
+                @Html.ActionLink("Jouska", "Index", "Home", null, new { @class = "navbar-brand title" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav navbar-right">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>      
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Students", "Index", "Student")</li>
-                    <li>@Html.ActionLink("Courses", "Index", "Course")</li>
+                    <li>@Html.ActionLink("Statistics", "About", "Home")</li>
                 </ul>
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div class="container-fluid body-content">
         @RenderBody()
         <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - 
-            Jouska University</p>
-        </footer>
+        <div class="container">
+            <footer>
+                <p>
+                    &copy; @DateTime.Now.Year -
+                    Jouska University
+                </p>
+            </footer>
+        </div>
     </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
